# ArrCProiect

./: CMakeLists.txt  main.cu
.github/actions/clang-tidy/: action.yml
.github/actions/cppcheck/: action.yml
.github/actions/install-packages/: action.yml
.github/workflows/: cmake.yml
cmake/: CompilerFlags.cmake
include/: elementwise_kernels.cuh  exceptions.h  ndarray.cuh  slices.h  tensor.h  utils.h
include/functions/: arithmetic.h  base.h
include/nn/: losses.h
include/optim/: adam.cuh  kernels.cuh  optimizer.h  rmsprop.cuh  sgd.cuh
scripts/: run_cppcheck.sh  run_cppcheck_ci.sh
src/: slices.cpp  slices.cu  utils.cpp  utils.cu
src/optim/: adam.cu  rmsprop.cu  sgd.cu
